fix: layout shift and toggle buttons added

--- a/src/popup/output.css
+++ b/src/popup/output.css
@@ -655,7 +655,6 @@ video {
 
 .w-10 {
   width: 2.5rem;
-
 }
 
 .w-5 {
@@ -666,6 +665,9 @@ video {
   width: 14rem;
 }
 
+.w-72 {
+  width: 18rem;
+}
 
 .w-80 {
   width: 20rem;
@@ -771,7 +773,9 @@ video {
   border-radius: 0.375rem;
 }
 
-
+.border {
+  border-width: 1px;
+}
 
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -808,7 +812,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
 
+.p-2\.5 {
+  padding: 0.625rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-\[18px\] {
+  padding: 18px;
+}
 
 .px-3 {
   padding-left: 0.75rem;
@@ -844,19 +862,23 @@ video {
   text-align: left;
 }
 
+.text-\[18px\] {
+  font-size: 18px;
+}
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.font-medium {
+  font-weight: 500;
 }
-
-
 
 .font-semibold {
   font-weight: 600;
@@ -990,7 +1012,33 @@ video {
   outline-offset: 2px;
 }
 
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
 
+.peer\/toggle:checked ~ .peer-checked\/toggle\:translate-x-\[82\%\] {
+  --tw-translate-x: 82%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.peer\/toggle:checked ~ .peer-checked\/toggle\:bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 133 5 / var(--tw-bg-opacity));
+}
+
+@container main (min-width: 400px) {
+  .\@\[400px\]\/main\:h-6 {
+    height: 1.5rem;
+  }
+
+  .\@\[400px\]\/main\:h-7 {
+    height: 1.75rem;
+  }
+
+  .\@\[400px\]\/main\:w-12 {
+    width: 3rem;
+  }
 
   .\@\[400px\]\/main\:w-6 {
     width: 1.5rem;
